--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:site" content="@example_handle">
 <meta name="twitter:title" content="FULL CLIP Stay Strong King: How Much Do You Bench Press?">
 <meta name="twitter:description" content="Stay Strong King: How Much Do You Bench Press?">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://github.com/Viddfinder/Benchpress/blob/main/king.jpg?raw=true">
 <!-- Redirect to YouTube video -->
 <meta http-equiv="refresh" content="0; url=https://youtu.be/_EkArrDyoiQ">
 </head>
